# sandbox

./: .clang-format  .gitignore  README.md
embedded/: .clang-format  BUILD  CMakeLists.txt  README  compile_commands.json  compile_flags.txt
embedded/Makefiles/: settings
embedded/Makefiles/arduino/: AltSoftSerial  AltSoftSerial.mk  EEPROM  EEPROM.mk  LiquidCrystal  LiquidCrystal.mk  LowPower  LowPower.mk  SD  SD.mk  build.mk  common  common.mk  core  core.mk  settings
embedded/Makefiles/devhost/: build.mk  common  common.mk  settings  wifi-transmitter  wifi-transmitter.mk
embedded/Makefiles/esp8266/: build.mk  common  core  sdkconfig  settings
embedded/Makefiles/pc/: build.mk  common  settings  wifi-transmitter
embedded/cmake/: CMakeLists.txt  catusb.sh
embedded/cmake/PC/: toolchain.cmake
embedded/cmake/arduino/: CMakeLists.txt  flash.sh  knife.sh  monitor.sh  notes.org  toolchain.cmake
embedded/cmake/arduino/AltSoftSerial/: CMakeLists.txt
embedded/cmake/arduino/EEPROM/: CMakeLists.txt
embedded/cmake/arduino/LiquidCrystal/: CMakeLists.txt
embedded/cmake/arduino/LowPower/: CMakeLists.txt
embedded/cmake/arduino/SoftwareSerial/: CMakeLists.txt
embedded/cmake/arduino/core/: CMakeLists.txt
embedded/cmake/esp8266/: CMakeLists.txt  flash.sh  monitor.sh  toolchain.cmake
embedded/cmake/esp8266/arduino-core/: CMakeLists.txt  create.py  make-core.sh  pgmspace.h
embedded/cmake/esp8266/arduino-core/cmakify/: root.cmake
embedded/cmake/esp8266/core/: CMakeLists.txt  build.sh  sdkconfig-core  sdkconfig.console_port1  sdkconfig.nodemcu
embedded/cmake/esp8266/sdfat/: CMakeLists.txt
embedded/cmake/pc/: toolchain.cmake
embedded/common/: CMakeLists.txt  clock.cpp  debug.cpp  debug.h  eeprom.cpp  eeprom.h  platform.cpp  platform.h  rtcmemory.cpp  rtcmemory.h  sleep.cpp  tickscounter.cpp  time.cpp  time.h  utils.cpp  utils.h  wifi.h  wifi_esp8266.cpp
embedded/common/include/common/: analog.h  clock.h  debug.h  digital.h  eeprom.h  lcd.h  platform.h  rusttypes.h  serial.h  sleep.h  stringawaiter.h  tickscounter.h  time.h  utils.h  wifi.h
embedded/common/src/: Makefile  analog.cpp  analog_arduino.cpp  analog_pc.cpp  clock.cpp  crc.cpp  crc.h  debug.cpp  digital_arduino.cpp  digital_esp8266.cpp  digital_pc.cpp  eeprom.cpp  lcd.cpp  serial.cpp  serial_arduino.cpp  serial_devhost.cpp  serial_esp8266.cpp  serial_pc.cpp  sleep.cpp  stringawaiter.cpp  tickscounter.cpp  time.cpp  utils.cpp  wifi_arduino.cpp  wifi_devhost.cpp  wifi_esp8266.cpp  wifi_pc.cpp
embedded/compteur/: CMakeLists.txt  Makefile  Makefile.arduino  Makefile.esp8266  README  README.md  adc.gnuplot  adc.h  adc_arduino.cpp  adc_devhost.cpp  adc_pc.cpp  adcfile.cpp  adcfile.h  add-time-column.py  alarmclock.cpp  alarmclock.h  analog.h  analog_pc.cpp  application-alt.cpp  application.cpp  application.h  application_esp8266.cpp  application_esp8266.h  capacity.cpp  capacity.h  chunkify.py  compteur.cpp  compteur.h  data.csv  data.tgz  detection.cpp  detection.h  extract_screenlog.sh  generate-test-data.sh  graphs.gnuplot  hamster.devhost  hamster.esp8266  histogram.cpp  histogram.gnuplot  histogram.h  (+52 more)
embedded/compteur/data/: real.txt  white_fix.txt
embedded/compteur/documentation/: adc.gnuplot  calibration.gnuplot  calibration2.gnuplot  make.sh
embedded/compteur/old/: graphs.gnuplot
embedded/compteur/recordings/data/test-03/: output.adc  screenlog.0
embedded/compteur/recordings/data/test-04/: output.adc
embedded/compteur/recordings/data/test-05/: output.adc
embedded/compteur/recordings/data/test-06/: output.adc
embedded/compteur/recordings/data/test-07/: cleanoutput.values  output.values
embedded/compteur/recordings/data/test-08/: screenlog.0
embedded/compteur/recordings/data/test-09/: output.short.values  output.values  screenlog.0
embedded/compteur/recordings/tools/: filter-time.py  record.sh  replay.gnuplot  replay.sh  split-dump.py
embedded/compteur/sd-data/: generate-test-data.sh  process-sd-data.sh
embedded/compteur/simulation/data/: alternate_fix.txt  real_good.txt  real_red_1.txt  real_red_2.txt  real_white.txt  red_fix.txt  white_mov.txt
embedded/compteur/simulation/tools/: generate.py  generated.gnuplot  histogram.gnuplot  make.py  plot-adc.sh  replay.gnuplot  replay.sh  take-record.sh  test.sh
embedded/esp8266/: generate-headers.sh
embedded/esp8266/esp-open-rtos/blink/: README  blink.c
embedded/esp8266/esp-open-rtos/temperature/: http_get.cpp
embedded/esp8266/espressif/hello_world/: Makefile
embedded/esp8266/min/: Makefile.esp-open-rtos  Makefile.esp8266  blink.cpp  foo.cpp  foo.h  work.sh
embedded/esp8266/scripts/: make-toolchain-espressif.sh
embedded/hamster/: Makefile  Makefile.arduino  Makefile.esp8266  application.cpp  freememory.cpp  lcd.cpp  main.cpp  nstring.cpp  parse.cpp  sensor.cpp  test_devhost.cpp  test_devhost.h  ui.cpp  ui.h  wifi.cpp  wifi.h  wifi_arduino.cpp  wifi_arduino.h
embedded/hamster/swig/: Makefile  statistics.i
embedded/measure/: Makefile  Makefile.arduino  analog.h  analog_pc.cpp  application.cpp  main_arduino.cpp  main_esp8266.cpp  main_pc.cpp
embedded/test/: CMakeLists.txt  Makefile  Makefile.arduino  application.cpp  main_esp8266.cpp
embedded/test-avr/: CMakeLists.txt  application.cpp  build-avr.sh
embedded/tests/: CMakeLists.txt
embedded/tests/test-avr/: CMakeLists.txt  build-avr.sh
embedded/tests/test-base/: CMakeLists.txt  Makefile.arduino  Makefile.esp8266  application.cpp  build-avr.sh  main_pc.cpp
embedded/tests/test-sdfat/: CMakeLists.txt  main.cpp
embedded/wifi-transmitter/: CMakeLists.txt  Makefile  Makefile.arduino  Makefile.esp8266  application.cpp  application.h  application_arduino.cpp  application_devhost.cpp  application_esp8266.cpp  crc.cpp  crc.h  main_arduino.cpp  main_devhost.cpp  main_esp8266.cpp  main_pc.cpp  message.cpp  message.h  message_queue.h  message_queue_devhost.cpp  message_queue_esp8266.cpp  readserial.sh  serial.h  serial_arduino.cpp  serial_devhost.cpp  serial_esp8266.cpp  sync.cpp  sync.h  transmitter.h  wifi_curl.h  wifi_curl_devhost.cpp  wifi_curl_pc.cpp
(+525 files in other folders)
