cmake_minimum_required(VERSION 3.12)
project(project)

add_subdirectory(common)
add_subdirectory(test)
add_subdirectory(cmake/arduino/EEPROM)
add_subdirectory(cmake/arduino/LiquidCrystal)
add_subdirectory(cmake/arduino/AltSoftSerial)
add_subdirectory(cmake/arduino/LowPower)
add_subdirectory(cmake/arduino/core)
